RobotJavaCC/source/uniandes/lym/robot/control/RobotParser.java
/* Generated By:JavaCC: Do not edit this line. RobotParser.java */
package uniandes.lym.robot.control;

import uniandes.lym.robot.kernel.*;
import java.io.*;
import java.util.ArrayList;


@SuppressWarnings("serial")
public class RobotParser implements RobotParserConstants {
   class Variable {

    private ArrayList variables = new ArrayList();
        private ArrayList valores = new ArrayList();


        private String nombre;

        private Integer numero;


        public Variable( String pNombre)
        {
                nombre = pNombre;
                numero = 0;


        }

        public String getNombre() {
                return nombre;
        }
        public Integer getNumero() {
                return numero;
        }

        public void setNombre(String nombre) {
                this.nombre = nombre;
        }

        public void setNumero(Integer numero) {
                this.numero = numero;
        }
}

        private RobotWorldDec robotw;
         private Variable[] store;
         private int eax;

        void setWorld(RobotWorld w) {
                robotw = (RobotWorldDec) w;
                 store = new Variable[100];
        }

    void delay(int d) {
                                try {
                                        Thread.sleep(d);
                                    } catch (InterruptedException e) {
                                        System.err.format("IOException: %s%n", e);
                                    }

    }

  final public boolean instructions(StringBuffer system) throws ParseException {
                                String output=new String();
    secuencia();
            {if (true) return true;}
    throw new Error("Missing return statement in function");
  }

  final public void secuencia() throws ParseException {
    jj_consume_token(ROBOT_R);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VARS:
      jj_consume_token(VARS);
      var();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    instrucion();
  }

  final public void var() throws ParseException {
    varF();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 51:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      jj_consume_token(51);
      varF();
    }
  }

  final public void varF() throws ParseException {
Token variableToken =  new Token();
    variableToken = jj_consume_token(name);
          String cadena  = variableToken.image;
   boolean encontro = false;
   int contador = 0;
   while (encontro == false)
   {
     if(store[contador] ==   null )
     {
       Variable variablex= new Variable(cadena);
       store[contador] = variablex;
     }
     contador++;
   }
  }

  final public void instrucion() throws ParseException {
    jj_consume_token(BEGIN);
    intru();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 52:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      jj_consume_token(52);
      intru();
    }
  }

  final public void intru() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case skip:
    case assign:
    case move:
    case turn:
    case face:
    case put:
    case pick:
    case name:
    case numero:
      command();
      break;
    case REPEAT:
    case IF:
    case WHILE:
      controlStructure();
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void command() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case assign:
      assign();
      break;
    case name:
    case numero:
      move();
      break;
    case turn:
      turn();
      break;
    case face:
      face();
      break;
    case put:
      put();
      break;
    case pick:
      pick();
      break;
    case move:
      moveTD();
      break;
    case skip:
      jj_consume_token(skip);

      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void block(boolean ejecutar) throws ParseException {
                if(!ejecutar) {
                        Token t = getNextToken();
                        while(t.kind!= T_END) {
                                t = getNextToken();
                        }
                        {if (true) return;}
                }
    jj_consume_token(BEGIN);
    label_3:
    while (true) {
      secuencia(ejecutar);
      semicolon(ejecutar);
            delay(500);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ROBOT_R:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_3;
      }
    }
    jj_consume_token(END);
  }

  final public void semicolon(boolean ejecutar) throws ParseException {
                if(!ejecutar) {
                        {if (true) return;}
                }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 52:
      jj_consume_token(52);
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
  }

  final public void assign() throws ParseException {
  Integer numero = null;
  Token tokenNombre;
  Token tokenNumero;
  String nombre="";
    jj_consume_token(assign);
    jj_consume_token(53);
    tokenNombre = jj_consume_token(numero);
    jj_consume_token(to);
    jj_consume_token(53);
    tokenNumero = jj_consume_token(name);
        try
        {
          int  pNumero = Integer.parseInt(tokenNumero.image);
          boolean encontro = false;
          int contador = 0;
         while(encontro = false ||contador < store.length )
         {
           if(store[contador].getNombre() == tokenNombre.image)
           {
             store[contador].setNumero(pNumero);
             encontro = true;

           }
                contador++;
         }

        }
        catch(Exception e)
        {

        }
  }

  final public void move() throws ParseException {
  Token nmovimientos = new Token() ;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case numero:
      nmovimientos = jj_consume_token(numero);
      break;
    case name:
      jj_consume_token(name);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
   try
   {
     int movimiento = Integer.parseInt(nmovimientos.image);

      robotw.moveForward(movimiento);

   }
   catch (NumberFormatException excepcion)
   {
    int contador = 0;
    boolean encontro = true;
    int veces = 0;
    while( contador < store.length|| encontro == false)
    {
      if(store[contador].getNombre().equals(nmovimientos.image))
      {
        veces = store[contador].getNumero();
        if (veces != 0)
        {
           robotw.moveForward(veces);
        }
        encontro = true;
      }
      contador ++;

    }
   }
  }

  final public void turn() throws ParseException {
  Token direccionT = new Token();
    jj_consume_token(turn);
    jj_consume_token(53);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case rigth:
      direccionT = jj_consume_token(rigth);
      break;
    case left:
      jj_consume_token(left);
      break;
    case around:
      jj_consume_token(around);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
   String direccion= direccionT.image;
   if(direccion.equals("right"))
   {
        robotw.turnRight();
   }
   else if (direccion.equals("left"))
   {
     robotw.turnRight();
     robotw.turnRight();
     robotw.turnRight();
   }
      else if (direccion.equals("around"))
   {
     robotw.turnRight();
     robotw.turnRight();

   }
  }

  final public void face() throws ParseException {
  Token direccionT = new Token();
    jj_consume_token(face);
    jj_consume_token(53);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case north:
      direccionT = jj_consume_token(north);
      break;
    case south:
      jj_consume_token(south);
      break;
    case east:
      jj_consume_token(east);
      break;
    case west:
      jj_consume_token(west);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
   String direccion= direccionT.image;
   if(direccion.equals("north"))
   {
     robotw.facingNorth();
   }
    else  if(direccion.equals("south"))
   {
     robotw.facingSouth();
   }
    else if(direccion.equals("west"))
   {
     robotw.facingWest();
   }
    else if(direccion.equals("east"))
   {
     robotw.facingEast();
   }
  }

  final public void put() throws ParseException {
  Token cantidadT = new Token();
  Token objetoT = new Token();
    jj_consume_token(put);
    jj_consume_token(53);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case numero:
      cantidadT = jj_consume_token(numero);
      break;
    case name:
      jj_consume_token(name);
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(of);
    jj_consume_token(53);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Balloons:
      objetoT = jj_consume_token(Balloons);
      break;
    case Chips:
      jj_consume_token(Chips);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
   try
   {
      int  pNumero = Integer.parseInt(cantidadT.image);


        if(objetoT.image.equals("Balloons"))
        {
          robotw.putBalloons(pNumero);
        }
        else  if(objetoT.image.equals("Chips"))
        {
          robotw.putChips(pNumero);
        }

   }
  catch (NumberFormatException excepcion)
   {
     int numero =0;
     boolean encontrado = false;
     for(int i = 0; i < store.length|| encontrado == false; i++)
     {
       if(store[i].getNombre().equals(cantidadT.image))
       {

          if(objetoT.image.equals("Balloons"))
        {
          robotw.putBalloons(store[i].getNumero());
        }
        else  if(objetoT.image.equals("Chips"))
        {
          robotw.putChips(store[i].getNumero());
        }

         encontrado = true;
       }
     }
   }
  }

  final public void pick() throws ParseException {
  Token cantidadT = new Token();
  Token objetoT = new Token();
    jj_consume_token(pick);
    jj_consume_token(53);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case numero:
      cantidadT = jj_consume_token(numero);
      break;
    case name:
      jj_consume_token(name);
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(of);
    jj_consume_token(53);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Balloons:
      objetoT = jj_consume_token(Balloons);
      break;
    case Chips:
      jj_consume_token(Chips);
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
   try
   {
      int  pNumero = Integer.parseInt(cantidadT.image);


        if(objetoT.image.equals("Balloons"))
        {
          robotw.grabBalloons(pNumero);
        }
        else  if(objetoT.image.equals("Chips"))
        {
          robotw.pickChips(pNumero);
        }

   }
  catch (NumberFormatException excepcion)
   {
     int numero =0;
     boolean encontrado = false;
     for(int i = 0; i < store.length|| encontrado == false; i++)
     {
       if(store[i].getNombre().equals(cantidadT.image))
       {

          if(objetoT.image.equals("Balloons"))
        {
          robotw.grabBalloons(store[i].getNumero());
        }
        else  if(objetoT.image.equals("Chips"))
        {
          robotw.pickChips(store[i].getNumero());
        }

         encontrado = true;
       }
     }
   }
  }

  final public void moveT() throws ParseException {
  Token direccionT = new Token();
    jj_consume_token(toThe);
    jj_consume_token(53);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case rigth:
      direccionT = jj_consume_token(rigth);
      break;
    case left:
      jj_consume_token(left);
      break;
    case around:
      jj_consume_token(around);
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
   if(robotw.getOrientation() == 0)
   {
     robotw.facingNorth();
     robotw.moveForward(eax);

   }
      if(robotw.getOrientation() == 1)
   {
     robotw.facingSouth();
     robotw.moveForward(eax);

   }
      if(robotw.getOrientation() == 2)
   {
     robotw.facingEast();
     robotw.moveForward(eax);

   }
      if(robotw.getOrientation() == 3)
   {
     robotw.facingWest();
     robotw.moveForward(eax);

   }
  }

  final public void moveD() throws ParseException {
   Token direccionT = new Token();
   int valor = 0;
   String direccion = "";
    jj_consume_token(inDir);
    jj_consume_token(53);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case north:
      direccionT = jj_consume_token(north);
      break;
    case south:
      jj_consume_token(south);
      break;
    case east:
      jj_consume_token(east);
      break;
    case west:
      jj_consume_token(west);
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(move);
    jj_consume_token(54);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case numero:
      direcccionT = jj_consume_token(numero);
      valor=Integer.parseInt(direccionT.toString());
      break;
    case name:
      token = jj_consume_token(name);
      int pos = variables.indexOf(direccionT.toString());
          if(pos!=-1) {
            valor=(int) valores.get(pos);
          }
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(51);
    direccionT = jj_consume_token(inDir);
            direccionF = direccionT.toString();
    jj_consume_token(55);
   if(direccionT.image.equals("west"))
   {
     robotw.moveHorizontally(- eax);
   }
   else  if(direccionT.image.equals("east"))
   {
     robotw.moveHorizontally(eax);
   }
    else if(direccionT.image.equals("north"))
   {
     robotw.moveVertically(eax);
   }
     else if(direccionT.image.equals("south"))
   {
     robotw.moveVertically(-eax);
   }
  }

//Move general
  final public void moveTD() throws ParseException {
  Token num = new Token();
    jj_consume_token(move);
    jj_consume_token(53);
    num = jj_consume_token(numero);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case toThe:
      moveT();
      break;
    case inDir:
      moveD();
      break;
    case name:
    case numero:
      move();
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//----------------------------------------------------------------------------------------------------------------------
  final public void controlStructure() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
      conditional();
      break;
    case WHILE:
      loop();
      break;
    case REPEAT:
      RepeatTimes();
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void conditional() throws ParseException {
        boolean x;
    jj_consume_token(IF);
    jj_consume_token(53);
    condicion();
    jj_consume_token(THEN);
    jj_consume_token(53);
    intru();
    jj_consume_token(ELSE);
    intru();
    jj_consume_token(IF);
    jj_consume_token(54);
    x = condicion();
    jj_consume_token(51);
    block(x);
    jj_consume_token(51);
    block(!x);
    jj_consume_token(55);
  }

  final public void loop() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(54);
    condicion();
    jj_consume_token(51);
    block(true);
    jj_consume_token(55);

  }

  final public void RepeatTimes() throws ParseException {
        int i = 0;
        Token t = new Token();
    jj_consume_token(REPEAT);
    jj_consume_token(53);
    intru();
    jj_consume_token(TIMES);
    jj_consume_token(53);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case numero:
      jj_consume_token(numero);
      break;
    case name:
      jj_consume_token(name);
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(REPEAT);
    jj_consume_token(54);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case numero:
      t = jj_consume_token(numero);
                    i = Integer.parseInt(t.toString());
      break;
    case name:
      token = jj_consume_token(name);
                    int posicion = variables.indexOf(t.toString());
                    if(posicion != -1)
                    {
                      i = (int)valores.get(posicion);
                    }
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(51);
            int beginline,begincol,endline,endcol;
                t = getNextToken();
                while(t.kind != END) {

                        break;
                }
                for(int j = 0; j < i-1; j++) {

                        block(true);

                }
    jj_consume_token(55);
  }

  final public void condicion() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case facing:
      facing();
      break;
    case canPut:
      canPut();
      break;
    case canPick:
      canPick();
      break;
    case canMove:
      canMove();
      break;
    case not:
      not();
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public boolean facing() throws ParseException {
  String s = "";
  Token t = new Token();
  boolean x;
    jj_consume_token(facing);
    jj_consume_token(53);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case north:
      jj_consume_token(north);
      break;
    case south:
      jj_consume_token(south);
      break;
    case east:
      jj_consume_token(east);
      break;
    case west:
      jj_consume_token(west);
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(face);
    jj_consume_token(54);
    t = jj_consume_token(facing);
    jj_consume_token(55);
            s=t.toString();
